@@ -945,7 +945,7 @@ For the `ConcurrentMessageListenerContainer`, the `<beanName>` part of the threa
 So, with a bean name of `container`, threads in this container will be named `container-0-C-1`, `container-1-C-1` etc., after the container is started the first time; `container-0-C-2`, `container-1-C-2` etc., after a stop/start.
 
 [[class-level-kafkalistener]]
-===== @KafkaListener on a class
+===== @KafkaListener on a Class
 
 When using `@KafkaListener` at the class-level, you specify `@KafkaHandler` at the method level.
 When messages are delivered, the converted message payload type is used to determine which method to call.
@@ -965,8 +965,18 @@ static class MultiListenerBean {
         ...
     }
 
+    @KafkaHandler(isDefault = true`)
+    public void listenDefault(Object object) {
+        ...
+    }
+
 }
 ----
+
+Starting with _version 2.1.3_, a `@KafkaHandler` method can be designated as the default method which is invoked if there is no match on other methods.
+At most one method can be so designated.
+When using `@KafkaHandler` methods, the payload must have already been converted to the domain object (so the match can be performed).
+Use a custom deserializer, the `JsonDeserializer` or the `StringJsonMessageConverter` with its `TypePrecedence` set to `TYPE_ID` - see <<serdes>> for more information.
 
 [[kafkalistener-lifecycle]]
 ===== @KafkaListener Lifecycle Management
@@ -1437,6 +1447,7 @@ By default, the type for the conversion is inferred from the listener argument.
 If you configure the `StringJsonMessageConverter` with a `DefaultJackson2TypeMapper` that has its `TypePrecedence` set to `TYPE_ID` (instead of the default `INFERRED`), then the converter will use type information in headers (if present) instead.
 This allows, for example, listener methods to be declared with interfaces instead of concrete classes.
 Also, the type converter supports mapping so the deserialization can be to a different type than the source (as long as the data is compatible).
+This is also useful when using <<class-level-kafkalistener,class-level `@KafkaListener` s>> where the payload must have already been converted, to determine which method to invoke.
 
 [source, java]
 ----
